feat(swagger): add OpenAPI configuration and Swagger UI documentation